@@ -51,6 +51,7 @@ theme:
   font:
     text: Roboto
     code: Roboto Mono
+  favicon: assets/images/favicon.png
   logo:
     icon: school
 
